[WFLY-7911]  Credential Store integration into messaging subsystem

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -40,6 +40,11 @@ bridge.add=Operation adding a bridge.
 bridge.check-period=The period (in milliseconds) between client failure check.
 bridge.confirmation-window-size=The confirmation-window-size to use for the connection used to forward messages to the target node.
 bridge.connection-ttl=The maximum time (in milliseconds) for which the connections used by the bridges are considered alive (in the absence of heartbeat).
+bridge.credential-reference=Credential (from Credential Store) to authenticate the bridge
+bridge.credential-reference.store=The name of the credential store holding the alias to credential
+bridge.credential-reference.type=The type of credential this reference is denoting
+bridge.credential-reference.alias=The alias which denotes stored secret or credential in the store
+bridge.credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 bridge.discovery-group=The name of the discovery group used by this bridge. Must be undefined (null) if 'static-connectors' is defined.
 bridge.failover-on-server-shutdown.deprecated=Deprecated. Has no runtime effect and a warning will be issued if an attempt is made to set the value of this attribute.
 bridge.failover-on-server-shutdown=Deprecated. Has no runtime effect and a warning will be issued if an attempt is made to set the value of this attribute.
@@ -280,6 +285,11 @@ server.close-consumer-connections-for-address.reply=True if any connections were
 server.close-consumer-connections-for-address.address-match=An ActiveMQ address match.
 server.cluster-password=The password used by cluster connections to communicate between the clustered nodes.
 server.cluster-user=The user used by cluster connections to communicate between the clustered nodes.
+server.cluster-credential-reference=Credential (from Credential Store) to authenticate to cluster
+server.cluster-credential-reference.store=The name of the credential store holding the alias to credential
+server.cluster-credential-reference.type=The type of credential this reference is denoting
+server.cluster-credential-reference.alias=The alias which denotes stored secret or credential in the store
+server.cluster-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 server.clustered.deprecated=To create a clustered ActiveMQ server, define at least one cluster-connection.
 server.clustered=Whether the server is clustered.
 server.commit-prepared-transaction.reply=True if the transaction was successfully committed, false otherwise.
@@ -476,6 +486,11 @@ jms-bridge.source-context=The properties used to configure the source JNDI initi
 jms-bridge.source-destination=The name of the source destination to lookup on the source messaging server.
 jms-bridge.source-password=The password for creating the source connection.
 jms-bridge.source-user=The name of the user for creating the source connection.
+jms-bridge.source-credential-reference=Credential (from Credential Store) to authenticate source connection
+jms-bridge.source-credential-reference.store=The name of the credential store holding the alias to credential
+jms-bridge.source-credential-reference.type=The type of credential this reference is denoting
+jms-bridge.source-credential-reference.alias=The alias which denotes stored secret or credential in the store
+jms-bridge.source-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 jms-bridge.start=Start the JMS bridge.
 jms-bridge.started=Whether the JMS bridge is started.
 jms-bridge.stop=Stop the JMS bridge.
@@ -485,6 +500,11 @@ jms-bridge.target-context=The properties used to configure the target JNDI initi
 jms-bridge.target-destination=The name of the target destination to lookup on the target messaging server.
 jms-bridge.target-password=The password for creating the target connection.
 jms-bridge.target-user=The name of the user for creating the target connection.
+jms-bridge.target-credential-reference=Credential (from Credential Store) to authenticate target connection
+jms-bridge.target-credential-reference.store=The name of the credential store holding the alias to credential
+jms-bridge.target-credential-reference.type=The type of credential this reference is denoting
+jms-bridge.target-credential-reference.alias=The alias which denotes stored secret or credential in the store
+jms-bridge.target-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 jms-bridge=A JMS bridge instance.
 jms-queue.add-jndi.jndi-binding=Jndi binding
 jms-queue.add-jndi=Adds the queue to another JNDI binding
