--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
@@ -88,7 +88,11 @@ datasources.data-source.capacity-incrementer-class=Class defining the policy for
 datasources.data-source.capacity-incrementer-properties=Properties to be injected in class defining the policy for incrementing connections in the pool
 datasources.data-source.capacity-decrementer-class=Class defining the policy for decrementing connections in the pool
 datasources.data-source.capacity-decrementer-properties=Properties to be injected in class defining the policy for decrementing connections in the pool
-
+datasources.data-source.credential-reference=Credential (from Credential Store) to authenticate on data source
+datasources.data-source.credential-reference.store=The name of the credential store holding the alias to credential
+datasources.data-source.credential-reference.type=The type of credential this reference is denoting
+datasources.data-source.credential-reference.alias=The alias which denotes stored secret or credential in the store
+datasources.data-source.credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 datasources.data-source.new-connection-sql=Specifies an SQL statement to execute whenever a connection is added to the connection pool
 datasources.data-source.no-tx-separate-pool=Oracle does not like XA connections getting used both inside and outside a JTA transaction. To workaround the problem you can create separate sub-pools for the different contexts
 
