[WFLY-8559] Added DWM test with multiple cases

--- a/testsuite/integration/basic/pom.xml
+++ b/testsuite/integration/basic/pom.xml
@@ -65,6 +65,49 @@
             <build>
                 <plugins>
 
+                    <!-- Build the target/jbossas server configuration. -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <!-- Copy in some jars. -->
+                            <execution>
+                                <id>prepare-jars-basic-integration.server</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <property name="tests.resources.dir" value="${basedir}/../src/test/resources"/>
+                                        <property name="tests.output.dir" value="${project.build.directory}"/>
+                                        <ant antfile="${basedir}/../src/test/scripts/basic-integration-build.xml">
+                                            <target name="build-basic-integration"/>
+                                            <!-- TODO: Unify names, then call "recursively". -->
+                                        </ant>
+                                    </target>
+                                </configuration>
+                            </execution>
+
+                            <!-- Prepare two servers for distributed workmanager scenarios. -->
+                            <!-- one should be in target/jbossas-distributed-0 the other in target/jbossas-distributed-1 -->
+                            <execution>
+                                <id>prepare-distributed-integration</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <ant antfile="${basedir}/../src/test/scripts/basic-integration-build.xml">
+                                            <target name="build-distributed"/>
+                                        </ant>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>keytool-maven-plugin</artifactId>
@@ -212,6 +255,7 @@
                                         <exclude>org/jboss/as/test/integration/ee/naming/defaultbindings/**/*TestCase.java</exclude>
                                         <exclude>org/jboss/as/test/integration/jca/moduledeployment/**/*TestCase*.java</exclude>
                                         <exclude>org/jboss/as/test/integration/transaction/inflow/TransactionInflowTestCase.java</exclude>
+                                        <exclude>org/jboss/as/test/integration/jca/workmanager/**/*Dwm*.java</exclude>
                                     </excludes>
 
                                     <environmentVariables>
@@ -281,11 +325,38 @@
                                 </configuration>
                             </execution>
 
+                            <execution>
+                                <id>basic-integration-ha.surefire</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- If you'd like to run these tests via -Dtest=<testname> you need to provide them
+                                         with the properties defined in systemPropertyVariablees -->
+                                    <!-- E.g. -Djboss.server.config.file.name=standalone-ha.xml -Darquillian.launch=distributed-group -->
+                                    <includes>
+                                        <include>org/jboss/as/test/integration/jca/workmanager/**/*Dwm*.java</include>
+                                    </includes>
+
+                                    <environmentVariables>
+                                        <JBOSS_HOME>${jboss.dist}</JBOSS_HOME>
+                                    </environmentVariables>
+
+                                    <!-- Parameters to test cases. -->
+                                    <systemPropertyVariables combine.children="append">
+                                        <arquillian.launch>distributed-group</arquillian.launch>
+                                        <jboss.server.config.file.name>standalone-ha.xml</jboss.server.config.file.name>
+                                        <jboss.inst>${basedir}/target/jbossas</jboss.inst>
+                                    </systemPropertyVariables>
+
+                                    <additionalClasspathElements>
+                                        <additionalClasspathElement>${project.basedir}/../src/test/resources</additionalClasspathElement>
+                                    </additionalClasspathElements>
+                                </configuration>
+                            </execution>
                         </executions>
-
                     </plugin>
-
-
                 </plugins>
             </build>
         </profile>
@@ -333,6 +404,7 @@
                                     <excludes>
                                         <exclude>org/jboss/as/test/integration/**/*SecondTestCase.java</exclude>
                                         <exclude>org/jboss/as/test/integration/security/loginmodules/Ldap*TestCase.java</exclude>
+                                        <exclude>org/jboss/as/test/integration/jca/workmanager/**/*Dwm*.java</exclude>
                                     </excludes>
                                 </configuration>
                             </execution>
@@ -375,6 +447,10 @@
                                 </execution>
                                 <execution>
                                     <id>basic-integration-ldap.surefire</id>
+                                    <phase>none</phase>
+                                </execution>
+                                <execution>
+                                    <id>basic-integration-ha.surefire</id>
                                     <phase>none</phase>
                                 </execution>
                             </executions>
