--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/resourceadapters/LocalDescriptions.properties
@@ -92,13 +92,17 @@ connection-definitions.capacity-decrementer-properties=Properties to inject in c
 connection-definitions.no-recovery=Specifies if the connection pool should be excluded from recovery.
 connection-definitions.no-tx-separate-pool=Oracle does not like XA connections getting used both inside and outside a JTA transaction. To workaround the problem you can create separate sub-pools for the different contexts.
 connection-definitions.pad-xid=Specifies whether the Xid should be padded.
-connection-definitions.password=Specifies the password used when creating a new connection.
 connection-definitions.pool-name=Specifies the pool name for the datasource used for management.
 connection-definitions.pool-prefill=Specifies if the pool should be prefilled. Changing this value requires a server restart.
 connection-definitions.pool-fair=Defines if pool use should be fair.
 connection-definitions.pool-use-strict-min=Specifies if the min-pool-size should be considered strict.
 connection-definitions.query-timeout=Any configured query timeout in seconds.
 connection-definitions.recovery-password=The password used for recovery.
+connection-definitions.recovery-credential-reference=Credential (from Credential Store) to authenticate on recovery connection
+connection-definitions.recovery-credential-reference.store=The name of the credential store holding the alias to credential
+connection-definitions.recovery-credential-reference.type=The type of credential this reference is denoting
+connection-definitions.recovery-credential-reference.alias=The alias which denotes stored secret or credential in the store
+connection-definitions.recovery-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 connection-definitions.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation.
 connection-definitions.recovery-plugin-properties=The properties for the recovery plugin.
 connection-definitions.recovery-security-domain=The PicketBox security domain used for recovery.
