--- a/jpa/subsystem/pom.xml
+++ b/jpa/subsystem/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>wildfly-controller</artifactId>
         </dependency>
 
+         <dependency>
+            <groupId>org.wildfly.transaction</groupId>
+            <artifactId>wildfly-transaction-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.eap</groupId>
             <artifactId>wildfly-ejb3</artifactId>
