[EAP7-552] EJB3 subsystem fixes:
- Remove items from the parser that had no actual implementation
- Change the way the static discovery element is handled so the model and XML are consistent
- Add reject transformer for static discovery
- Update XSD and tests to reflect the new schema

--- a/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions.properties
+++ b/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions.properties
@@ -316,11 +316,17 @@ remoting-profile.add=Adds a remoting profile
 remoting-profile.remove=Removes a remoting profile
 remoting-profile.exclude-local-receiver=If set no local receiver is used in this profile
 remoting-profile.local-receiver-pass-by-value=If set local receiver will pass ejb beans by value
+remoting-profile.static-ejb-discovery=Describes static discovery config for EJB's
+remoting-profile.static-ejb-discovery.app-name=The EJB application name
+remoting-profile.static-ejb-discovery.module-name=The EJB module name
+remoting-profile.static-ejb-discovery.distinct-name=The EJB distinct name
+remoting-profile.static-ejb-discovery.uri=The URI to use for invocations to this EJB module
 remoting-ejb-receiver=A remoting ejb receiver reference included in the profile
 remoting-ejb-receiver.add=Adds a remoting ejb receiver reference to the profile
 remoting-ejb-receiver.remove=Removes a remoting ejb receiver reference from the profile
 remoting-ejb-receiver.outbound-connection-ref=Name of outbound connection that will be used by the ejb receiver
 remoting-ejb-receiver.connect-timeout=Remoting ejb receiver connect timeout
+
 
 mdb-delivery-group=Delivery group to manage delivery for mdbs
 mdb-delivery-group.active=Indicates if delivery for all MDBs belonging to this group is active
@@ -337,11 +343,3 @@ identity=Identity definition for security identity propagation
 identity.add=Add the identity resource
 identity.remove=Remove the identity resource
 identity.outflow-security-domains=References to security domains to attempt to outflow any established identity to
-
-discovery=Discovery configuration
-discovery.add=Adds discovery configuration
-discovery.remove=Removes discovery configuration
-discovery.static-urls=Static urls of remote ejbs
-discovery.static-urls.attributes=Attributes of static-url
-discovery.static-urls.abstract-type=Type of static-url
-discovery.static-urls.abstract-type-authority=Type authority of static-url
