--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
         <version.org.jboss.metadata>10.0.0.Final-redhat-1</version.org.jboss.metadata>
         <version.org.jboss.narayana>5.5.1.Final</version.org.jboss.narayana>
         <version.org.jboss.mod_cluster>1.3.6.CR1-redhat-1</version.org.jboss.mod_cluster>
-        <version.org.jboss.openjdk-orb>8.0.7.Final</version.org.jboss.openjdk-orb>
+        <version.org.jboss.openjdk-orb>8.0.7.Final-redhat-1</version.org.jboss.openjdk-orb>
         <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.1.Final-redhat-1</version.org.jboss.xnio.netty.netty-xnio-transport>
         <version.org.jboss.resteasy>3.0.20.Final-redhat-1</version.org.jboss.resteasy>
         <version.org.jboss.seam.int>7.0.0.GA-redhat-2</version.org.jboss.seam.int>
