--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <version.net.shibboleth.utilities.java-support>7.1.1.redhat-1</version.net.shibboleth.utilities.java-support>
         <version.org.apache.activemq.artemis>1.5.1.jbossorg-001</version.org.apache.activemq.artemis>
         <version.org.apache.avro>1.8.1.redhat-1</version.org.apache.avro>
-        <version.org.apache.cxf>3.1.9</version.org.apache.cxf>
+        <version.org.apache.cxf>3.1.9.redhat-1</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.0.5.redhat-1</version.org.apache.cxf.xjcplugins>
         <version.org.apache.ds>2.0.0-M20</version.org.apache.ds>
         <version.org.apache.httpcomponents.httpasyncclient>4.1.2</version.org.apache.httpcomponents.httpasyncclient>
@@ -201,9 +201,9 @@
         <version.org.jboss.weld.weld-api>2.4.0.SP1-redhat-1</version.org.jboss.weld.weld-api>
         <version.org.jboss.ws.api>1.0.3.Final-redhat-1</version.org.jboss.ws.api>
         <version.org.jboss.ws.spi>3.1.4.Final</version.org.jboss.ws.spi>
-        <version.org.jboss.ws.common>3.1.4.Final</version.org.jboss.ws.common>
-        <version.org.jboss.ws.common.tools>1.2.3.Final</version.org.jboss.ws.common.tools>
-        <version.org.jboss.ws.cxf>5.1.7.Final</version.org.jboss.ws.cxf>
+        <version.org.jboss.ws.common>3.1.4.Final-redhat-1</version.org.jboss.ws.common>
+        <version.org.jboss.ws.common.tools>1.2.3.Final-redhat-1</version.org.jboss.ws.common.tools>
+        <version.org.jboss.ws.cxf>5.1.7.Final-redhat-1</version.org.jboss.ws.cxf>
         <version.org.jboss.ws.jaxws-undertow-httpspi>1.0.1.Final-redhat-1</version.org.jboss.ws.jaxws-undertow-httpspi>
         <version.org.jgroups>3.6.13.Final</version.org.jgroups>
         <version.org.jgroups.azure>1.0.0.Final-redhat-1</version.org.jgroups.azure>
