--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
         <version.org.jboss.weld.weld>2.4.2.SP1-redhat-1</version.org.jboss.weld.weld>
         <version.org.jboss.weld.weld-api>2.4.0.SP1-redhat-1</version.org.jboss.weld.weld-api>
         <version.org.jboss.ws.api>1.0.3.Final-redhat-1</version.org.jboss.ws.api>
-        <version.org.jboss.ws.spi>3.1.4.Final</version.org.jboss.ws.spi>
+        <version.org.jboss.ws.spi>3.1.4.Final-redhat-1</version.org.jboss.ws.spi>
         <version.org.jboss.ws.common>3.1.4.Final-redhat-1</version.org.jboss.ws.common>
         <version.org.jboss.ws.common.tools>1.2.3.Final-redhat-1</version.org.jboss.ws.common.tools>
         <version.org.jboss.ws.cxf>5.1.7.Final-redhat-1</version.org.jboss.ws.cxf>
