--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,7 @@
         <version.org.opensaml.opensaml>3.1.1.redhat-1</version.org.opensaml.opensaml>
         <version.org.picketbox.picketbox-commons>1.0.0.final-redhat-5</version.org.picketbox.picketbox-commons>
         <version.org.picketlink>2.5.5.SP4-redhat-1</version.org.picketlink>
-        <version.org.slf4j>1.7.22</version.org.slf4j>
+        <version.org.slf4j>1.7.22.redhat-1</version.org.slf4j>
         <version.org.syslog4j>0.9.30</version.org.syslog4j>
         <version.org.wildfly.build-tools>1.1.8.Final</version.org.wildfly.build-tools>
         <version.org.wildfly.checkstyle-config>1.0.5.Final</version.org.wildfly.checkstyle-config>
