WFLY-7882 Refactor JGroups subsystem to use programmatic stack creation instead of ProtocolStackConfigurator.

--- a/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions.properties
+++ b/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions.properties
@@ -54,7 +54,6 @@ jgroups.transport.add=Add the configuration of a transport for a protocol stack.
 jgroups.transport.remove=Remove the configuration of a transport for a protocol stack.
 jgroups.transport.shared=If true, the underlying transport is shared by all channels using this stack.
 jgroups.transport.shared.deprecated=Deprecated. Transport sharing is now achieved by using fork channels.
-jgroups.transport.data-source=Data source reference for JDBC_PING protocol to be used instead of connection and JNDI lookup properties.
 jgroups.transport.diagnostics-socket-binding=The diagnostics socket binding specification for this protocol layer, used to specify IP interfaces and ports for communication.
 jgroups.transport.default-executor=The thread pool executor to handle incoming messages.
 jgroups.transport.default-executor.deprecated=Deprecated. Supports EAP 6.x slaves.
@@ -86,6 +85,7 @@ jgroups.protocol.type=The implementation class for a protocol, which determines 
 jgroups.protocol.type.deprecated=Deprecated. Will be removed in a future version.
 jgroups.protocol.module=The module with which to resolve the protocol type.
 jgroups.protocol.socket-binding=The socket binding specification for this protocol layer, used to specify IP interfaces and ports for communication.
+jgroups.protocol.socket-binding.deprecated=Deprecated.  Supports EAP 7.0 slaves.
 jgroups.protocol.properties=The properties of this protocol.
 jgroups.protocol.property=A JGroups protocol property.
 # property resource
