--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -367,6 +367,7 @@ undertow.application-security-domain.add=Add a new application referenced securi
 undertow.application-security-domain.remove=Remove the application referenced security domain mapping.
 undertow.application-security-domain.http-authentication-factory=The HTTP Authentication Factory to be used by deployments that reference the mapped security domain.
 undertow.application-security-domain.override-deployment-config=Should the authentication configuration in the deployment be overridden by the factory.
+undertow.application-security-domain.enable-jacc=Enable authorization using JACC
 undertow.application-security-domain.referencing-deployments=The deployments currently referencing this mapping.
 undertow.application-security-domain.setting=Settings
 
