WFLY-8128 recovery-credential under xa-data-source is missing support for credential store references

--- a/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
+++ b/connector/src/main/resources/org/jboss/as/connector/subsystems/datasources/LocalDescriptions.properties
@@ -170,6 +170,11 @@ datasources.data-source.recovery-username=The user name used for recovery
 datasources.data-source.recovery-password=The password used for recovery
 datasources.data-source.recovery-security-domain=The security domain used for recovery, for PicketBox security domains
 datasources.data-source.recovery-elytron-enabled=Enables Elytron security for handling authentication of connections for recovery. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.data-source.recovery-credential-reference=Credential (from Credential Store) to authenticate on data source
+datasources.data-source.recovery-credential-reference.store=The name of the credential store holding the alias to credential
+datasources.data-source.recovery-credential-reference.type=The type of credential this reference is denoting
+datasources.data-source.recovery-credential-reference.alias=The alias which denotes stored secret or credential in the store
+datasources.data-source.recovery-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 datasources.data-source.recovery-authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.data-source.recovery-plugin-properties.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.data-source.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
@@ -303,6 +308,11 @@ datasources.xa-data-source.recovery-username=The user name used for recovery
 datasources.xa-data-source.recovery-password=The password used for recovery
 datasources.xa-data-source.recovery-security-domain=The security domain used for recovery
 datasources.xa-data-source.recovery-elytron-enabled=Enables Elytron security for handling authentication of connections for recovery. The Elytron authentication-context to be used will be current context if no context is specified (see authentication-context).
+datasources.xa-data-source.recovery-credential-reference=Credential (from Credential Store) to authenticate on data source
+datasources.xa-data-source.recovery-credential-reference.store=The name of the credential store holding the alias to credential
+datasources.xa-data-source.recovery-credential-reference.type=The type of credential this reference is denoting
+datasources.xa-data-source.recovery-credential-reference.alias=The alias which denotes stored secret or credential in the store
+datasources.xa-data-source.recovery-credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
 datasources.xa-data-source.recovery-authentication-context=The Elytron authentication context which defines the javax.security.auth.Subject that is used to distinguish connections in the pool.
 datasources.xa-data-source.recovery-plugin-properties.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
 datasources.xa-data-source.recovery-plugin-class-name=The fully qualified class name of the recovery plugin implementation
