--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <version.gnu.getopt>1.0.13.redhat-5</version.gnu.getopt>
         <version.groovy-all>2.4.7</version.groovy-all>
         <version.httpunit>1.7</version.httpunit>
-        <version.io.netty>4.1.5.Final</version.io.netty>
+        <version.io.netty>4.1.5.Final-redhat-1</version.io.netty>
         <version.io.undertow.jastow>2.0.1.Final-redhat-1</version.io.undertow.jastow>
         <version.io.undertow.js>1.0.2.Final-redhat-1</version.io.undertow.js>
         <version.javax.activation>1.1.1.redhat-5</version.javax.activation>
@@ -117,7 +117,7 @@
         <version.jsoup>1.8.3.redhat-2</version.jsoup>
         <version.net.jcip>1.0.0.redhat-8</version.net.jcip>
         <version.net.shibboleth.utilities.java-support>7.1.1.redhat-1</version.net.shibboleth.utilities.java-support>
-        <version.org.apache.activemq.artemis>1.5.3.jbossorg-002</version.org.apache.activemq.artemis>
+        <version.org.apache.activemq.artemis>1.5.3.002-redhat-1</version.org.apache.activemq.artemis>
         <version.org.apache.avro>1.8.1.redhat-1</version.org.apache.avro>
         <version.org.apache.cxf>3.1.9.redhat-1</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.0.5.redhat-1</version.org.apache.cxf.xjcplugins>
@@ -167,7 +167,7 @@
         <version.org.jboss.narayana>5.5.2.Final-redhat-1</version.org.jboss.narayana>
         <version.org.jboss.mod_cluster>1.3.6.CR1-redhat-1</version.org.jboss.mod_cluster>
         <version.org.jboss.openjdk-orb>8.0.7.Final-redhat-1</version.org.jboss.openjdk-orb>
-        <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.2.Final</version.org.jboss.xnio.netty.netty-xnio-transport>
+        <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.2.Final-redhat-1</version.org.jboss.xnio.netty.netty-xnio-transport>
         <version.org.jboss.resteasy>3.0.20.Final-redhat-1</version.org.jboss.resteasy>
         <version.org.jboss.seam.int>7.0.0.GA-redhat-2</version.org.jboss.seam.int>
         <version.org.jboss.security.jboss-negotiation>3.0.3.Final-redhat-1</version.org.jboss.security.jboss-negotiation>
