WFLY-5029 EJB, Naming and Transactions over HTTP

--- a/testsuite/integration/pom.xml
+++ b/testsuite/integration/pom.xml
@@ -361,7 +361,17 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.eap</groupId>
+            <groupId>org.wildfly.transaction</groupId>
+            <artifactId>wildfly-transaction-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.wildfly-http-client</groupId>
+            <artifactId>wildfly-http-ejb-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+             <groupId>org.jboss.eap</groupId>
             <artifactId>wildfly-webservices-tests-integration</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
