WFLY-8239 Upgrade jgroups-azure to 1.1.0.Final

--- a/feature-pack/pom.xml
+++ b/feature-pack/pom.xml
@@ -1283,7 +1283,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jgroups</groupId>
+            <groupId>org.jgroups.azure</groupId>
             <artifactId>jgroups-azure</artifactId>
         </dependency>
 
