[WFLY-8246] Static cluster with http-connector
add server-name attribute to the http-connector resources so that the
connector can connect to the correct ActiveMQ Artemis server on a remote
app server (as the app server can embed multiple Artemis server with the
same acceptor names, the Artemis server name is required to identifed
the correct one).
If this attribute is undefined, the http-connector will use the name of
its parent Artemis server (making it suitable for http-connector used to
connect to the server itself).

JIRA: https://issues.jboss.org/browse/WFLY-8246

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -185,6 +185,7 @@ connector-service=A connector service allows to integrate external components wi
 connector.add.params=A set of key-value pairs understood by the connector factory-class and used to configure it.
 connector.add=Operation adding a connector
 connector.endpoint=The http-acceptor that serves as the endpoint of this http-connector.
+connector.server-name=The name of the ActiveMQ Artemis server that will be connected to on the remote server. If undefined, the name of the parent ActiveMQ Artemis server will be used (suitable if the http-connector is used to connect to the parent server)
 connector.factory-class=Class name of the factory class that can instantiate the connector.
 connector.params=A key-value pair understood by the connector factory-class and used to configure it.
 connector.remove=Operation removing a connector
