--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -151,7 +151,7 @@ undertow.listener.verify-client=The desired SSL client authentication mode for S
 undertow.listener.verify-client.deprecated=Where an SSLContext is referenced it should be configured directly for the required mode of client verification.
 undertow.listener.always-set-keep-alive=If this is true then a Connection: keep-alive header will be added to responses, even when it is not strictly required by the specification.
 undertow.listener.redirect-socket=If this listener is supporting non-SSL requests, and a request is received for which a matching <security-constraint> requires SSL transport, undertow will automatically redirect the request to the socket binding port specified here.
-undertow.listener.proxy-address-forwarding=Enables  handling of x-forwarded-host (and other x-forwarded-* headers) and use this header information to set the remote address. This should only be used behind a trusted proxy that sets these headers otherwise a remote user can spoof their IP address.
+undertow.listener.proxy-address-forwarding=Enables  handling of x-forwarded-host header (and other x-forwarded-* headers) and use this header information to set the remote address. This should only be used behind a trusted proxy that sets these headers otherwise a remote user can spoof their IP address.
 undertow.listener.enabled-cipher-suites=Configures Enabled SSL ciphers
 undertow.listener.enabled-cipher-suites.deprecated=Where an SSLContext is referenced it should be configured with the cipher suites to be supported.
 undertow.listener.enabled-protocols=Configures SSL protocols
@@ -196,7 +196,7 @@ undertow.listener.http2-max-concurrent-streams=The maximum number of HTTP/2 stre
 undertow.listener.http2-max-header-list-size=The maximum size of request headers the server is prepared to accept
 undertow.listener.http2-initial-window-size=The flow control window size that controls how quickly the client can send data to the server
 undertow.listener.http2-header-table-size=The size of the header table used for HPACK compression, in bytes. This amount of memory will be allocated per connection for compression. Larger values use more memory but may give better compression.
-undertow.listener.require-host-http11=Require that all HTTP/1.1 have a 'Host' header, as per the RFC. IF the request does not include this header it will be rejected with a 403.
+undertow.listener.require-host-http11=Require that all HTTP/1.1 requests have a 'Host' header, as per the RFC. IF the request does not include this header it will be rejected with a 403.
 undertow.host=An Undertow host
 undertow.host.add=Adds a new host
 undertow.host.remove=Removes a host
