--- a/weld/webservices/pom.xml
+++ b/weld/webservices/pom.xml
@@ -25,6 +25,12 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.logging</groupId>
+         <artifactId>jboss-logging-annotations</artifactId>
+         <scope>provided</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.eap</groupId>
          <artifactId>wildfly-webservices-server-integration</artifactId>
          <exclusions>
