WFLY-8315 JGroups protocols collect statistics by default WFLY-2453 Expose statistics configuration attribute per JGroups protocol WFLY-8317 Stack element in JGroups subsystem allows arbitrary attribute to be defined

--- a/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions.properties
+++ b/clustering/jgroups/extension/src/main/resources/org/jboss/as/clustering/jgroups/subsystem/LocalDescriptions.properties
@@ -8,6 +8,7 @@ jgroups.default-stack.deprecated=Deprecated. This attribute will be removed in a
 # stack resource
 jgroups.stack=The configuration of a JGroups protocol stack.
 jgroups.stack.add=Add a protocol stack to the JGroups subsystem.
+jgroups.stack.statistics-enabled=Indicates whether or not all protocols in the stack will collect statistics by default.
 jgroups.stack.transport=Optional OBJECT parameter specifying the transport for the stack.
 jgroups.stack.transport.deprecated=Deprecated. Use separate transport add operation instead.
 jgroups.stack.transport.type=The implementation class for a protocol, which determines protocol functionality.
@@ -95,6 +96,7 @@ jgroups.protocol.credential-reference.store=The name of the credential store hol
 jgroups.protocol.credential-reference.alias=The alias which denotes stored secret or credential in the store.
 jgroups.protocol.credential-reference.type=The type of credential this reference is denoting.
 jgroups.protocol.credential-reference.clear-text=The secret specified using clear text. Check credential store way of supplying credential/secrets to services.
+jgroups.protocol.statistics-enabled=Indicates whether or not this protocol will collect statistics overriding stack configuration.
 # property resource
 jgroups.property=A protocol property with name and value.
 jgroups.property.deprecated=Deprecated. Protocol properties are defined via the "properties" attribute of the parent resource.
