WFLY-8356 Maven shade plugin does not handle overlapping META-INF/services correctly

--- a/client/shade/pom.xml
+++ b/client/shade/pom.xml
@@ -86,6 +86,9 @@
                                 </transformer>
                             </transformers>
                             <createSourcesJar>true</createSourcesJar>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
