WFLY-8394 Deprecate binary-keyed-jdbc-store and mixed-keyed-jdbc-store

--- a/clustering/infinispan/extension/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/clustering/infinispan/extension/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -305,7 +305,11 @@ infinispan.store.jdbc.string-keyed-table.table.timestamp-column=A database colum
 infinispan.store.jdbc.string-keyed-table.table.timestamp-column.column.name=The name of the database column.
 infinispan.store.jdbc.string-keyed-table.table.timestamp-column.column.type=The type of the database column.
 
+infinispan.store.binary-jdbc.deprecated=Deprecated.  Will be removed without replacement in a future release.  Use store=jdbc instead.
+infinispan.store.mixed-jdbc.deprecated=Deprecated.  Will be removed without replacement in a future release.  Use store=jdbc instead.
+
 infinispan.table.binary=Defines a table used to store cache entries whose keys cannot be expressed as strings.
+infinispan.table.binary.deprecated=Deprecated. Defines a table used to store cache entries whose keys cannot be expressed as strings.
 infinispan.table.binary.add=Adds a table used to store cache entries whose keys cannot be expressed as strings.
 infinispan.table.binary.remove=Removes a table used to store cache entries whose keys cannot be expressed as strings.
 infinispan.table.string=Defines a table used to store cache entries whose keys can be expressed as strings.
