[WFLY-8392]: Uninformative description of undertow subsystem configuration for a deployment
Updating description.

--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -371,7 +371,7 @@ undertow.application-security-domain.enable-jacc=Enable authorization using JACC
 undertow.application-security-domain.referencing-deployments=The deployments currently referencing this mapping.
 undertow.application-security-domain.setting=Settings
 
-undertow.deployment=A deployment
+undertow.deployment=Information about the web container handling of this deployment
 undertow.deployment.context-root=The context root of the web application
 undertow.deployment.virtual-host=The name of the virtual host on which the web application is served
 undertow.deployment.server=The name of server this application belongs to
@@ -384,7 +384,7 @@ undertow.deployment.duplicated-session-ids=Number of duplicated session IDs gene
   bigger than 0 means problems)
 undertow.deployment.session-avg-alive-time=Average time (in seconds) that expired sessions had been alive
 undertow.deployment.session-max-alive-time=The longest time (in seconds) that an expired session had been alive
-undertow.deployment.servlet=Servlet
+undertow.deployment.servlet=Information about the status and configuration of this servlet
 undertow.deployment.servlet.servlet-name=Name of the servlet
 undertow.deployment.servlet.servlet-class=Class of the servlet
 undertow.deployment.servlet.min-request-time=Minimal time for processing request
@@ -392,7 +392,7 @@ undertow.deployment.servlet.max-request-time=Maximal time for processing request
 undertow.deployment.servlet.total-request-time=Total time spend in processing all requests
 undertow.deployment.servlet.request-count=Number of all requests
 undertow.deployment.servlet.mappings=Servlet mappings
-undertow.deployment.websocket=Websocket
+undertow.deployment.websocket=Information about the status and configuration of this websocket
 undertow.deployment.websocket.endpoint-class=The endpoint class
 undertow.deployment.websocket.path=The path the endpoint is deployed to
 
