--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
         <version.org.wildfly.core>3.0.0.Beta12</version.org.wildfly.core>
         <version.org.wildfly.plugin>1.2.0.Alpha2</version.org.wildfly.plugin>
         <version.org.wildfly.arquillian>2.1.0.Alpha1</version.org.wildfly.arquillian>
-        <version.org.wildfly.http-client>1.0.0.Alpha4</version.org.wildfly.http-client>
+        <version.org.wildfly.http-client>1.0.0.Alpha4-redhat-1</version.org.wildfly.http-client>
         <version.org.wildfly.naming-client>1.0.0.Beta13</version.org.wildfly.naming-client>
         <version.org.wildfly.transaction.client>1.0.0.Beta19-redhat-1</version.org.wildfly.transaction.client>
         <version.org.yaml.snakeyaml>1.17.0.redhat-1</version.org.yaml.snakeyaml>
