--- a/clustering/service/pom.xml
+++ b/clustering/service/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>jboss-threads</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.common</groupId>
+            <artifactId>wildfly-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <scope>provided</scope>
