--- a/webservices/tests-integration/pom.xml
+++ b/webservices/tests-integration/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>wildfly-controller-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.common</groupId>
+            <artifactId>wildfly-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.eap</groupId>
             <artifactId>wildfly-security</artifactId>
             <exclusions>
