[WFLY-8554] Add credential-reference to pooled-connection-factory resource
credential-reference is an alternative to the password attribute to
configure the user credentials passed to Artemis RA.

wildfly-messaging-activemq_1_1.xsd is not touched as the schema is already defining the
credential-reference XML element inside pooled-connection-factory XML element.

JIRA: https://issues.jboss.org/browse/WFLY-8554

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -682,6 +682,12 @@ pooled-connection-factory.connection-ttl=The connection ttl.
 pooled-connection-factory.connectors=Defines the connectors. These are stored in a map by connector name (with an undefined value). It is possible to pass a list of connector names when writing this attribute.
 pooled-connection-factory.consumer-max-rate=The consumer max rate.
 pooled-connection-factory.consumer-window-size=The consumer window size.
+pooled-connection-factory.credential-reference=Credential (from Credential Store) to authenticate the pooled connection factory
+pooled-connection-factory.credential-reference.store=The name of the credential store holding the alias to credential
+pooled-connection-factory.credential-reference.type=The type of credential this reference is denoting
+pooled-connection-factory.credential-reference.alias=The alias which denotes stored secret or credential in the store
+pooled-connection-factory.credential-reference.clear-text=Secret specified using clear text (check credential store way of supplying credential/secrets to services)
+
 pooled-connection-factory.discovery-group=The discovery group name.
 pooled-connection-factory.discovery-initial-wait-timeout.deprecated=Has no runtime effect and a warning will be issued if an attempt is made to set the value of this attribute.
 pooled-connection-factory.discovery-initial-wait-timeout=The discovery initial wait time out.
